# chatbot_project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env-sample  pyproject.toml
accounts/: urls.py  views.py
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_bot_answer_alter_bot_response.py
fixtures/: 01_segmento.json
ia/: model_ia.py
kernel/: settings.py  urls.py
nginx/: proxy.conf
static/css/: sidebar.css  style.css
static/js/: sidebar.js  theme.js
templates/: base.html
templates/accounts/: login.html  register.html
templates/core/: index.html
templates/partials/: navbar.html  sidebar.html
