[project]
name = "chatbot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.0",
    "django-extensions>=4.1",
    "django>=6.0.1",
    "python-decouple>=3.8",
    "taskipy>=1.14.1",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "chromadb>=1.4.0",
    "sentence-transformers>=5.2.0",
    "langchain-openai>=1.1.7",
    "pypdf>=6.6.0",
    "langchain-chroma>=1.1.0",
    "ipdb>=0.13.13",
    "gunicorn>=24.1.1",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
[tool.taskipy.tasks]
startapp = "uv run python manage.py startapp"
makemigrations = "uv run python manage.py makemigrations"
migrate = "uv run python manage.py migrate"
createsuperuser = "uv run python manage.py createsuperuser"
runserver = "uv run python manage.py runserver"
shell_plus = "uv run python manage.py shell_plus"
showmigrations = "uv run python manage.py showmigrations"
loaddata = "uv run python manage.py loaddata fixtures/01_segmento.json"
dumpfixtures = "uv run python manage.py dumpdata core.bot --format=json --indent=2 > fixtures/01_segmento.json"
